--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,5 +14,8 @@ Imports:
     sf (>= 0.8-0),
     tidyverse (>= 1.3.0)
 Suggests: 
-    spelling
+    spelling,
+    knitr,
+    rmarkdown
 Language: en-US
+VignetteBuilder: knitr
