--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,17 +5,19 @@ Version: 0.1.0
 Authors@R: person("Paulo", "Cardoso", role=c("aut", "cre"),
     email = "pcaulo.c@bioinsight.pt")
 Mantainer: Paulo Cardoso
-Description: Automatically obtain dwp file required to run GenEst.
+Description: Automatically obtain dwp file required to run GenEst
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
 Imports: 
     sf (>= 0.8-0),
-    tidyverse (>= 1.3.0)
+    dplyr (>= 0.8.4),
+    purrr (>= 0.3.3)
 Suggests: 
     spelling,
     knitr,
-    rmarkdown
+    rmarkdown,
+    tidyverse
 Language: en-US
 VignetteBuilder: knitr
