--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,23 @@
 export(adjust)
 export(dwp)
 export(viring)
-import(sf)
-import(tidyverse)
+importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
+importFrom(dplyr,tally)
+importFrom(dplyr,ungroup)
+importFrom(purrr,map)
+importFrom(sf,st_area)
+importFrom(sf,st_buffer)
+importFrom(sf,st_cast)
+importFrom(sf,st_centroid)
+importFrom(sf,st_crs)
+importFrom(sf,st_difference)
+importFrom(sf,st_drop_geometry)
+importFrom(sf,st_intersection)
+importFrom(sf,st_intersects)
+importFrom(sf,st_join)
+importFrom(sf,st_nearest_feature)
