--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,8 @@ Description: Automatically obtain dwp file required to run GenEst from two mail
     to identify the distances to be used for ring distances. Any carcass falling
     in visibility class = 0 will be automatically moved to the nearest visible area.
     Check this before running DWP.
-URL: Find details at package [website](https://pauloeduardocardoso.github.io/genestdwp/index.html).
-BugReports: Please fill a bug report or add a comment at [Github]https://github.com/PauloEduardoCardoso/genestdwp/issues).
+URL: https://pauloeduardocardoso.github.io/genestdwp/index.html
+BugReports: https://github.com/PauloEduardoCardoso/genestdwp/issues
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
