--- a/codecov.yml
+++ b/codecov.yml
@@ -1,5 +1,9 @@
 comment: false
-
+language: R
+sudo: false
+cache: packages
+after_success:
+- Rscript -e 'covr::codecov()'
 coverage:
   status:
     project:
@@ -10,3 +14,4 @@ coverage:
       default:
         target: auto
         threshold: 1%
+
