--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,3 +22,4 @@ importFrom(sf,st_intersection)
 importFrom(sf,st_intersects)
 importFrom(sf,st_join)
 importFrom(sf,st_nearest_feature)
+importFrom(sf,st_set_agr)
