travis erros - no-build-vignette

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,12 @@ r:
   - release
 
 # Add GDAL, GEOS, proj, and units2 dependencies
-before_install:
-  - sudo add-apt-repository ppa:ubuntugis/ppa --yes
-  - sudo apt-get --yes --force-yes update -qq
-  - sudo apt-get install --yes libudunits2-dev #libproj-dev libgeos-dev libgdal-dev
+
+#before_install:
+#  - sudo add-apt-repository ppa:ubuntugis/ppa --yes
+#  - sudo apt-get --yes --force-yes update -qq
+#  - sudo apt-get install --yes libudunits2-dev #libproj-dev libgeos-dev libgdal-dev
+
 # Binary versions of packages to reduce build time.
 r_binary_packages:
   - dplyr
@@ -21,4 +23,6 @@ r_binary_packages:
   - purrr
   - rgeos
 
+r_build_args: --no-build-vignettes --no-manual
+r_check_args: --no-build-vignettes --no-manual --timings
 warnings_are_errors: false
