--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,9 +16,10 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
-Depends: R (>= 3.5.0)
-Imports: 
-    sf (>= 0.8-1),
+Depends:
+    R (>= 3.5.0),
+    sf (>= 0.8-1)
+Imports:
     dplyr (>= 0.8.4),
     purrr (>= 0.3.3),
     magrittr (>= 1.5)
