--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
+language: r
 cache: packages
 latex: false
 sudo: true
 dist: trusty
+
+addons:
+  apt:
+    packages:
+      - libudunits2-dev
 
 r:
   - release
@@ -14,10 +19,8 @@ r:
 before_install:
   - sudo add-apt-repository ppa:ubuntugis/ppa --yes
   - sudo apt-get --yes --force-yes update -qq
-  - sudo apt-get install --yes libproj-dev libgeos-dev libgdal-dev
+  - sudo apt-get install --yes libudunits2-dev libproj-dev libgeos-dev libgdal-dev
 
-apt_packages:
-  - libudunits2-dev
 # Binary versions of packages to reduce build time.
 r_binary_packages:
   - dplyr
